# squirrel

./: .gitignore  Cargo.toml  GUIDE.md  README.md  rust-toolchain.toml
.cargo/: config.toml
glass-box/: Cargo.toml
glass-box/src/: agent.rs  display.rs  lib.rs  state.rs
inference-engine/: Cargo.toml
inference-engine/src/: backend.rs  gguf.rs  lib.rs  router.rs  tensor.rs  tokenizer.rs  transformer.rs
inference-engine/src/backends/: api.rs  local.rs  mod.rs
intent-bus/: Cargo.toml
intent-bus/src/: audit.rs  bus.rs  intent.rs  lib.rs  payloads.rs
kernel/: Cargo.toml
kernel/src/: gdt.rs  main.rs  timer.rs
kernel/src/agents/: echo.rs  heartbeat.rs  keyboard_bridge.rs  mod.rs  settings_handler.rs
kernel/src/display/: mod.rs
kernel/src/drivers/: keyboard.rs  mod.rs
kernel/src/drivers/network/: mod.rs  virtio_net.rs
kernel/src/interrupts/: apic.rs  handlers.rs  ioapic.rs  mod.rs
kernel/src/memory/: dma.rs  heap.rs  mod.rs  pmm.rs  vmm.rs
modules/display-module/: Cargo.toml
modules/display-module/src/: lib.rs
modules/hello-module/: Cargo.toml
modules/hello-module/src/: lib.rs
modules/input-module/: Cargo.toml
modules/input-module/src/: lib.rs
modules/settings-module/: Cargo.toml
modules/settings-module/src/: lib.rs
modules/storage-module/: Cargo.toml
modules/storage-module/src/: lib.rs
network/: Cargo.toml
network/src/: agent.rs  e1000.rs  http.rs  lib.rs  nic.rs  pci.rs  rng.rs  rtl8139.rs  stack.rs  tls.rs  virtio_net.rs
primary-agent/: Cargo.toml
primary-agent/src/: lib.rs  planner.rs
sart/: Cargo.toml
sart/src/: agent.rs  executor.rs  lib.rs
settings/: Cargo.toml
settings/src/: crypto.rs  lib.rs  schema.rs  store.rs
svfs/: Cargo.toml
svfs/src/: block.rs  layout.rs  lib.rs  ram_blk.rs  store.rs
wasm-runtime/: Cargo.toml
wasm-runtime/src/: host_abi.rs  lib.rs  module_agent.rs  runtime.rs
