[workspace]
resolver = "2"
members = [
    "kernel",
    "intent-bus",
    "sart",
    "wasm-runtime",
    "svfs",
    "glass-box",
    "network",
    "inference-engine",
    "settings",
    "primary-agent",
]
# Note: modules/* crates (display-module, input-module, storage-module,
# settings-module, hello-module) are NOT workspace members because they
# compile to wasm32-unknown-unknown (a different target than x86_64-unknown-none).
# They declare their own [workspace] and are built independently:
#   cd modules/<name> && cargo build --release --target wasm32-unknown-unknown

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"   # kernels must not unwind

[profile.dev]
panic = "abort"
