[package]
name = "squirrel-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "squirrel-kernel"
path = "src/main.rs"

[dependencies]
limine = "0.5"
x86_64 = "0.15"
spin = "0.9"
volatile = "0.5"
uart_16550 = "0.4"
noto-sans-mono-bitmap = { version = "0.3", features = ["regular", "size_16"] }
linked_list_allocator = "0.10"
pc-keyboard = "0.7"
intent-bus = { path = "../intent-bus" }
sart = { path = "../sart" }
wasm-runtime = { path = "../wasm-runtime" }
svfs = { path = "../svfs" }
glass-box = { path = "../glass-box", package = "squirrel-glass-box" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[features]
default = []
