[package]
name = "squirrel-network"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# TCP/IP stack — runs in no_std with alloc, gives us DHCP + DNS + TCP sockets
smoltcp = { version = "0.11", default-features = false, features = [
    "alloc",
    "proto-ipv4",
    "proto-dhcpv4",
    "proto-dns",
    "socket-tcp",
    "socket-dhcpv4",
    "socket-dns",
    "log",
] }

# Kernel-safe spinlocks (no_std)
spin = "0.9"

# x86_64 port I/O for PCI and virtio register access
x86_64 = "0.15"

# Serialization for Intent Bus payloads
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

# Squirrel subsystems
intent-bus = { path = "../intent-bus" }
sart = { path = "../sart" }

# Logging facade (smoltcp uses it; we route to our println!)
log = { version = "0.4", default-features = false }

[features]
default = []

# TLS support requires ring, which needs a C cross-compilation toolchain
# for x86_64-unknown-none. Enable this in Stage 2 when we have a proper
# freestanding C library. For now, HTTP (not HTTPS) is sufficient for
# local inference and QEMU-proxied API calls.
# tls = ["dep:rustls", "dep:webpki-roots"]
