[package]
name = "squirrel-network"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# TCP/IP stack — runs in no_std with alloc, gives us DHCP + DNS + TCP sockets
smoltcp = { version = "0.11", default-features = false, features = [
    "alloc",
    "proto-ipv4",
    "proto-dhcpv4",
    "proto-dns",
    "socket-tcp",
    "socket-dhcpv4",
    "socket-dns",
    "log",
] }

# TLS 1.3 — pure Rust, no_std, no C dependencies (uses RustCrypto internally)
# This replaces the ring+rustls approach which couldn't compile on bare metal.
embedded-tls = { version = "0.18", default-features = false }
embedded-io = "0.7"

# Cryptographic RNG — we provide a custom backend using x86_64 RDRAND instruction
rand_core = { version = "0.6", default-features = false }

# Kernel-safe spinlocks (no_std)
spin = "0.9"

# x86_64 port I/O for PCI and virtio register access
x86_64 = "0.15"

# Serialization for Intent Bus payloads
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }

# Squirrel subsystems
intent-bus = { path = "../intent-bus" }
sart = { path = "../sart" }

# Logging facade (smoltcp uses it; we route to our println!)
log = { version = "0.4", default-features = false }

[features]
default = []
