[package]
name = "squirrel-settings"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Kernel-safe spinlocks for the in-memory settings cache
spin = "0.9"

# blake3 hashing — used for key derivation in API key encryption.
# Already in the project (SVFS uses it). We use it here to derive
# a machine-specific encryption key from CPUID + machine seed.
blake3 = { version = "1.6", default-features = false }

# Hex encoding/decoding for SVFS hash references in settings TOML
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# SVFS — the storage backend for persisting settings across reboots
svfs = { path = "../svfs" }
