[package]
name = "squirrel-settings-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# This module is an independent crate — not part of the kernel workspace
# for compilation purposes. It compiles to wasm32-unknown-unknown and gets
# embedded in the kernel via include_bytes!.
#
# Note: It IS listed in the workspace Cargo.toml for IDE support,
# but it's built separately with:
#   cargo build --release --target wasm32-unknown-unknown
[workspace]

[profile.release]
opt-level = "s"   # Optimize for small binary size
lto = true         # Link-time optimization for smaller output
